--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@
 
 @font-face {
   font-family: Roboto;
-  src: url("./assets/fonts/Roboto-Bold.woff2") format("woff2");
+  src: url('./assets/fonts/Roboto-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 
 body {
   margin: 25px;
-  background-image: url("./assets/images/bg.jpg");
+  background-image: url('./assets/images/bg.jpg');
   background-size: cover;
   font-family: Roboto, sans-serif;
 }
